@@ -1,3 +1,12 @@
+2013-05-19  Matthias Klose  <doko@ubuntu.com>
+
+	* include/Makefile.am (bits_headers): Remove ${bits_host_headers}.
+	(ext_headers): Remove ${ext_host_headers}.
+	(stamp-${host_alias}): Create ${host_builddir}/../ext.
+	(stamp-host): Link ${bits_host_headers} and ${ext_host_headers}.
+	(install-headers): Install ${bits_host_headers} and ${ext_host_headers}.
+	* include/Makefile.in: Regenerate.
+
 2013-05-18  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
 	* include/std/system_error (error_category::error_category()): LWG
